--- a/registro-usuarios/src/main/resources/static/register.html
+++ b/registro-usuarios/src/main/resources/static/register.html
@@ -1,47 +1,129 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Register - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/untitled.css">
-</head>
-<body class="bg-gradient-primary">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap"
+    />
+    <link rel="stylesheet" href="assets/css/untitled.css" />
+  </head>
+  <body class="bg-gradient-primary">
     <div class="container">
-        <div class="card shadow-lg o-hidden border-0 my-5">
-            <div class="card-body p-0">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h4 class="text-dark mb-4">Crear Cuenta</h4>
-                            </div>
-                            <form class="user" action="http://localhost:8080/users/register" method="post">
-                                <div class="row mb-3">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="Nombre" name="firstName"></div>
-                                    <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="exampleLastName" placeholder="Apellidos" name="lastName"></div>
-                                </div>
-                                <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Direccion de correo electrónico" name="email"></div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="password" id="examplePasswordInput" placeholder="Contraseña" name="password"></div>
-                                    <div class="col-sm-6"><input class="form-control form-control-user" type="password" id="exampleRepeatPasswordInput" placeholder="Repita la contraseña" name="password_repeat"></div>
-                                </div>
-                                <button class="btn btn-primary d-block btn-user w-100" type="submit">Crear Cuenta</button>
-                            </form>
-                            <div class="text-center"><a class="small" href="forgot-password.html">Ha olvidado la contraseña?</a></div>
-                            <div class="text-center"><a class="small" href="login.html">Ya tiene una cuenta? Inicie sesión!</a></div>
-                        </div>
-                    </div>
-                    <div class="col"></div>
+      <div class="card shadow-lg o-hidden border-0 my-5">
+        <div class="card-body p-0">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="p-5">
+                <div class="text-center">
+                  <h4 class="text-dark mb-4">Crear Cuenta</h4>
                 </div>
+                <form id="registrationForm" class="user">
+                  <div class="row mb-3">
+                    <div class="col-sm-6 mb-3 mb-sm-0">
+                      <input
+                        class="form-control form-control-user"
+                        type="text"
+                        id="exampleFirstName"
+                        placeholder="Nombre"
+                        name="firstName"
+                      />
+                    </div>
+                    <div class="col-sm-6">
+                      <input
+                        class="form-control form-control-user"
+                        type="text"
+                        id="exampleLastName"
+                        placeholder="Apellidos"
+                        name="lastName"
+                      />
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <input
+                      class="form-control form-control-user"
+                      type="email"
+                      id="exampleInputEmail"
+                      placeholder="Direccion de correo electrónico"
+                      name="email"
+                    />
+                  </div>
+                  <div class="row mb-3">
+                    <div class="col-sm-6 mb-3 mb-sm-0">
+                      <input
+                        class="form-control form-control-user"
+                        type="password"
+                        id="examplePasswordInput"
+                        placeholder="Contraseña"
+                        name="password"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    type="button"
+                    onclick="submitForm()"
+                    class="btn btn-primary d-block btn-user w-100"
+                  >
+                    Crear Cuenta
+                  </button>
+                </form>
+                <div class="text-center">
+                  <a class="small" href="forgot-password.html"
+                    >Ha olvidado la contraseña?</a
+                  >
+                </div>
+                <div class="text-center">
+                  <a class="small" href="login.html"
+                    >Ya tiene una cuenta? Inicie sesión!</a
+                  >
+                </div>
+              </div>
             </div>
+            <div class="col"></div>
+          </div>
         </div>
+      </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
-</body>
+    <script>
+      function submitForm() {
+        var formData = {
+          firstName: document.getElementById("exampleFirstName").value,
+          lastName: document.getElementById("exampleLastName").value,
+          email: document.getElementById("exampleInputEmail").value,
+          password: document.getElementById("examplePasswordInput").value,
+        };
 
+        fetch("http://localhost:8080/users/register", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(formData),
+        })
+          .then((response) => {
+            if (response.ok) {
+              // Si la respuesta es exitosa, redirigir a login.html
+              window.location.href = "/login.html";
+            } else {
+              // Si la respuesta no es exitosa, mostrar un error
+              return response.text().then((text) => {
+                throw new Error(text);
+              });
+            }
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+            alert("Failed to register: " + error.message);
+          });
+      }
+    </script>
+  </body>
 </html>
