--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+<html data-bs-theme="light" lang="en" data-bss-forced-theme="light">
 
 <head>
     <meta charset="utf-8">
@@ -7,14 +7,18 @@
     <title>Dashboard - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
+    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Free.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/css/untitled.css">
 </head>
 
 <body id="page-top">
     <div id="wrapper">
         <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+            <div class="container-fluid p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                     <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-book-open"></i></div>
                     <div class="sidebar-brand-text mx-3"><span>Brand</span></div>
                 </a>
@@ -26,17 +30,16 @@
                     <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Registrarse</span></a></li>
                 </ul>
-                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
+                <div class="text-center d-none d-md-inline"><button class="btn border-0 rounded-circle" id="sidebarToggle" type="button"></button></div>
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
+                <nav class="bg-white navbar navbar-expand shadow mb-4 topbar static-top navbar-light">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group"></div>
-                        </form>
-                        <ul class="navbar-nav flex-nowrap ms-auto">
+                        </form><ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                 <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
                                     <form class="me-auto navbar-search w-100">
@@ -135,8 +138,8 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Eventos del Centro</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span></span></div>
+                                            <div class="text-uppercase fw-bold text-primary text-xs mb-1"><span>Eventos del Centro</span></div>
+                                            <div class="fw-bold text-dark h5 mb-0"><span></span></div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
                                     </div>
@@ -148,8 +151,8 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col me-2">
-                                            <div class="text-uppercase text-success fw-bold text-xs mb-1"><span>EMT Transporte</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>Directo&nbsp;</span></div>
+                                            <div class="text-uppercase fw-bold text-success text-xs mb-1"><span>EMT Transporte</span></div>
+                                            <div class="fw-bold text-dark h5 mb-0"><span>Directo&nbsp;</span></div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-bus fa-2x text-gray-300"></i></div>
                                     </div>
@@ -161,14 +164,14 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col me-2">
-                                            <div class="text-uppercase text-info fw-bold text-xs mb-1"><span>Tareas pendientes</span></div>
+                                            <div class="text-uppercase fw-bold text-info text-xs mb-1"><span>Tareas pendientes</span></div>
                                             <div class="row g-0 align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="text-dark fw-bold h5 mb-0 me-3"><span>50%</span></div>
+                                                    <div class="fw-bold text-dark h5 mb-0 me-3"><span>50%</span></div>
                                                 </div>
                                                 <div class="col">
                                                     <div class="progress progress-sm">
-                                                        <div class="progress-bar bg-info" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"><span class="visually-hidden">50%</span></div>
+                                                        <div class="progress-bar bg-info" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%;"><span class="visually-hidden">50%</span></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -188,43 +191,43 @@
                         <div class="col-lg-6 offset-xl-0 mb-4">
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="text-primary fw-bold m-0">Projects</h6>
+                                    <h6 class="fw-bold text-primary m-0">Projects</h6>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="small fw-bold">Programación de servicios y procesos<span class="float-end">20%</span></h4>
+                                    <h4 class="fw-bold small">Programación de servicios y procesos<span class="float-end">20%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
+                                        <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%;"><span class="visually-hidden">20%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">Acceso a datos&nbsp;<span class="float-end">40%</span></h4>
+                                    <h4 class="fw-bold small">Acceso a datos&nbsp;<span class="float-end">40%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
+                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%;"><span class="visually-hidden">40%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">Sistemas de gestión empresarial<span class="float-end">60%</span></h4>
+                                    <h4 class="fw-bold small">Sistemas de gestión empresarial<span class="float-end">60%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
+                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"><span class="visually-hidden">60%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">Desarrollo de interfaces&nbsp;<span class="float-end">80%</span></h4>
+                                    <h4 class="fw-bold small">Desarrollo de interfaces&nbsp;<span class="float-end">80%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="visually-hidden">80%</span></div>
+                                        <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;"><span class="visually-hidden">80%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">Inglés DAMII&nbsp;<span class="float-end">Complete!</span></h4>
+                                    <h4 class="fw-bold small">Inglés DAMII&nbsp;<span class="float-end">Complete!</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="visually-hidden">100%</span></div>
+                                        <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;"><span class="visually-hidden">100%</span></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="text-primary fw-bold m-0">&nbsp;Lista de tareas</h6>
+                                    <h6 class="fw-bold text-primary m-0">&nbsp;Lista de tareas</h6>
                                 </div>
-                                <ul class="list-group list-group-flush">
+                                <ul class="list-group list-group-flush list-group-flush">
                                     <li class="list-group-item">
                                         <div class="row align-items-center no-gutters">
                                             <div class="col me-2">
                                                 <h6 class="mb-0"><strong>Aprobar acceso a datos&nbsp;</strong></h6><span class="text-xs">10:30 AM</span>
                                             </div>
                                             <div class="col-auto">
-                                                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1"></label></div>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-1"><label class="form-label form-check-label" for="formCheck-1"></label></div>
                                             </div>
                                         </div>
                                     </li>
@@ -234,7 +237,7 @@
                                                 <h6 class="mb-0"><strong>Hacer práctica Móviles</strong></h6><span class="text-xs">11:30 AM</span>
                                             </div>
                                             <div class="col-auto">
-                                                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2"></label></div>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-2"><label class="form-label form-check-label" for="formCheck-2"></label></div>
                                             </div>
                                         </div>
                                     </li>
@@ -249,10 +252,11 @@
                     <div class="text-center my-auto copyright"><span></span></div>
                 </div>
             </footer>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
+        </div><a class="d-inline border rounded scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/js/theme.js"></script>
 </body>
 
 </html>
